# thesis-project

./: .gitignore  AGENTS.md  Architecture_Design_Specification.md  Dockerfile  Dockerfile-old  Implementation.md  README.md  cloud_data_ingestion.py  commitment_44982ef6-ebc3-4dff-9995-3bed392835ae.json  commitment_6964cfe6-d7f3-4429-bf54-4262788994fe.json  commitment_7b2716cf-3a14-4784-9a88-003ccdabc7c7.json  commitment_a2801fd7-48a9-439c-9bdb-39cd1883665b.json  commitment_ab93fc6c-4908-41e8-a092-58f7df042d03.json  commitment_b3211df1-5637-4764-9f40-faa039b79c8d.json  commitment_ebbee2c2-31d8-43a6-8442-741472dd7a00.json  commitment_f381394f-a68f-4fe3-8a1b-8f9f6d0dba74.json  create_sample_dataset.py  demo.py  docker-compose.prod.yml  docker-compose.yml  ec2-deploy.sh  ec2-user-data.sh  fastapi-server.py  local-api-server.py  local-demo.py  random_block_selector.py  requirements.txt  standalone_audit.py  test_scenarios.py  test_tampering.py  test_upload.csv  zk-audit.pem
.claude/: settings.local.json
0_generate_dataset/: generate_blocks_commitments.py
1_blocks_commitments/: merkle_commitment.json
frontend/: .dockerignore  .env.example  Dockerfile  README-LOCAL.md  README.md  nginx.conf  package-lock.json  package.json  start-frontend.sh  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: DataEditor.tsx  DataViewer.tsx  Header.tsx
frontend/src/context/: AuditContext.tsx
frontend/src/pages/: AuditPage.tsx  DataTamperingPage.tsx  HomePage.tsx  ResultsPage.tsx  UploadPage.tsx
frontend/src/services/: api.ts
infrastructure/: cdk.json  deploy-fixed.sh  deploy.sh  package-lock.json  package.json
lambda-functions/: Cargo.toml  Dockerfile  build.sh
lambda-functions/src/: lib.rs  stark.rs
merkle_commitments/: commitment_1c390b6a-8f1f-4ba3-9c75-ae25af5568c7.json  commitment_30060027-e628-4199-8322-7ef87a2f0869.json  commitment_5b3903db-bc6f-4dda-887e-d29738df07cf.json  commitment_b6b719d4-9fdf-4d47-b136-24ed89ca08b4.json
monitoring/: cloudwatch-metrics.py
test_blocks_commitments/: block_0001.csv  block_0002.csv  block_0003.csv  block_0004.csv  merkle_commitment.json
verification/: MANUAL_TAMPERING_STEPS.md  README.md  merkle_proof.pkl  simple_tamper_test.py  stark_prove.py  stark_verify.py  verify_blocks.py
verification-rs/: Cargo.toml  README.md  simple_stark_proof.json
verification-rs/src/: lib.rs  simple_stark.rs  stark.rs
verification-rs/tests/: stark_tests.rs
