[package]
name = "zk-audit-lambda"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "block-fetcher"
path = "src/bin/block_fetcher.rs"

[[bin]]
name = "hash-generator"
path = "src/bin/hash_generator.rs"

[[bin]]
name = "stark-prover"
path = "src/bin/stark_prover.rs"

[[bin]]
name = "stark-verifier"
path = "src/bin/stark_verifier.rs"

[dependencies]
# AWS Lambda Runtime
lambda_runtime = "0.8"
lambda-web = "0.2"
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# AWS SDK
aws-config = "1.0"
aws-sdk-s3 = "1.0"
aws-sdk-dynamodb = "1.0"

# Crypto and hashing
sha3 = "0.10"
hex = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Existing ZK proof dependencies
winterfell = "0.9"
bincode = "1.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }