[package]
name = "merkle-verification"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "verify_blocks"
path = "src/bin/verify_blocks.rs"

[[bin]]
name = "tamper_test"
path = "src/bin/tamper_test.rs"

[[bin]]
name = "stark_prove"
path = "src/bin/stark_prove.rs"

[[bin]]
name = "stark_verify"
path = "src/bin/stark_verify.rs"

[[bin]]
name = "simple_stark_prove"
path = "src/bin/simple_stark_prove.rs"

[[bin]]
name = "simple_stark_verify"
path = "src/bin/simple_stark_verify.rs"

[[bin]]
name = "test_stark"
path = "src/bin/test_stark.rs"

[[bin]]
name = "benchmark_stark"
path = "src/bin/benchmark_stark.rs"

[[bin]]
name = "demo_zk_verification"
path = "src/bin/demo_zk_verification.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
hex = "0.4"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
winterfell = "0.9"
bincode = "1.3"

[dev-dependencies]
tempfile = "3.0"