[package]
name = "merkle-verification"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "verify_upload_blocks"
path = "src/bin/verify_upload_blocks.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
hex = "0.4"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
winterfell = "0.9"
bincode = "1.3"

[dev-dependencies]
tempfile = "3.0"